# streamfly

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: pub.rs  server.rs  sub.rs
src/: client.rs  io.rs  lib.rs  main.rs  msg.rs  server.rs  stream.rs
