[package]
name = "streamfly"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-channel = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
s2n-quic = { version = "1", features = ["unstable-provider-datagram"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
