[package]
name = "streamfly"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-channel = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
futures = "0.3"
log = "0.4"
nanoid = "0.4"
rmp-serde = "1.1"
s2n-quic = { version = "1", features = ["unstable-provider-datagram"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
